--- a/app/src/main/res/drawable/bg_button_filled_rounded.xml
+++ b/app/src/main/res/drawable/bg_button_filled_rounded.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <solid android:color="@color/my_green" />
-    <corners android:radius="999dp"/>
+    <corners android:topLeftRadius="25dp" android:topRightRadius="25dp"/>
 
 </shape>
