--- a/app/src/main/res/layout/activity_food_detector_camera.xml
+++ b/app/src/main/res/layout/activity_food_detector_camera.xml
@@ -4,39 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.food_detector.FoodDetectorCamera">
 
+  <!--BACK BUTTON-->
+  <androidx.appcompat.widget.AppCompatButton
+      android:id="@+id/btn_back"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="12dp"
+      android:layout_marginTop="18dp"
+      android:minWidth="0dp"
+      android:padding="12dp"
+      android:drawableStart="@drawable/ic_close"
+      android:background="@drawable/bg_button_oval_filled"
+      android:backgroundTint="@color/white"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <!--CAMERA PREVIEW-->
   <androidx.camera.view.PreviewView
       android:id="@+id/viewFinder"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      tools:layout_editor_absoluteX="-16dp"
-      tools:layout_editor_absoluteY="0dp" />
-
-  <ImageView
-      android:id="@+id/captureImage"
-      android:layout_width="75dp"
-      android:layout_height="75dp"
-      android:layout_marginBottom="32dp"
-      android:contentDescription="@string/capture_image_button"
-      app:layout_constraintBottom_toTopOf="@+id/search_button"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.498"
-      app:layout_constraintStart_toStartOf="parent"
-      app:srcCompat="@drawable/ic_capture" />
-
-  <androidx.appcompat.widget.AppCompatButton
-      android:id="@+id/search_button"
       android:layout_width="0dp"
-      android:layout_height="62dp"
-      android:background="@drawable/bg_button_filled_rounded"
-      android:text="@string/search_food_text"
-      android:textColor="@color/white"
-      android:textSize="16sp"
-      android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_height="480dp"
+      android:layout_marginTop="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      tools:alpha="1" />
+      app:layout_constraintTop_toBottomOf="@+id/btn_back"
+      tools:background="@color/my_green_100"/>
+
+  <!--CAMERA SHUTTER-->
+  <androidx.appcompat.widget.AppCompatButton
+      android:id="@+id/camera_shutter"
+      android:layout_width="80dp"
+      android:layout_height="80dp"
+      android:background="@drawable/bg_button_camera_shutter"
+      app:layout_constraintBottom_toTopOf="@+id/search_view"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/viewFinder" />
+
+  <!--SEARCH VIEW LAYOUT-->
+  <LinearLayout
+      android:id="@+id/search_view"
+      android:layout_width="match_parent"
+      android:layout_height="70dp"
+      android:orientation="vertical"
+      android:background="@drawable/bg_button_filled_rounded"
+      android:backgroundTint="@color/white"
+      app:layout_constraintBottom_toBottomOf="parent" >
+
+    <!--BUTTON FOOD SEARCH-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_food_search"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="18dp"
+        android:gravity="center_vertical"
+        android:paddingHorizontal="12dp"
+        android:background="@drawable/bg_button_stroke"
+        android:text="Type some food..."
+        android:textAllCaps="false"
+        android:drawableEnd="@drawable/ic_search_green"
+        android:textColor="@color/grey" />
+
+  </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
