--- a/app/src/main/res/layout/activity_food_detector_text.xml
+++ b/app/src/main/res/layout/activity_food_detector_text.xml
@@ -6,50 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".ui.food_detector.FoodDetectorText">
 
+    <!--BACK BUTTON-->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_back"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:padding="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="12dp"
         android:drawableStart="@drawable/ic_back"
         android:background="@drawable/bg_button_oval_filled"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--TITLE-->
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="12dp"
         android:text="@string/search_text_1"
-        android:textSize="25sp"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_back" />
 
+    <!--SUB TITLE-->
     <TextView
         android:id="@+id/tv_text_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/search_text_2"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="12dp"
         app:layout_constraintTop_toBottomOf="@id/tv_text" />
 
+    <!--SEARCH BAR-->
+    <SearchView
+        android:id="@+id/search_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="12dp"
+        android:background="@drawable/bg_button_stroke"
+        android:iconifiedByDefault="false"
+        android:queryBackground="@android:color/transparent"
+        android:queryHint="Type some food..."
+        android:searchIcon="@null"
+        app:layout_constraintEnd_toStartOf="@+id/btn_search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_text_2" />
+
+    <!--SEARCH BUTTON-->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_search"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/bg_button_oval_filled"
         android:drawableStart="@drawable/ic_search"
         android:padding="12dp"
@@ -57,52 +69,59 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/search_bar" />
 
-    <SearchView
-        android:id="@+id/search_bar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
-        android:background="@drawable/bg_button_stroke"
-        android:iconifiedByDefault="false"
-        android:queryBackground="@android:color/transparent"
-        android:queryHint="Search restaurant..."
-        android:searchIcon="@null"
-        app:layout_constraintEnd_toStartOf="@+id/btn_search"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_text_2" />
+    <!--DIVIDER-->
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/long_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="12dp"
+        app:layout_constraintTop_toBottomOf="@id/search_bar"/>
 
+    <!--RESULT FOUND LAYOUT-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/result_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/search_bar"
+        app:layout_constraintTop_toBottomOf="@id/long_divider"
         app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/tv_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/result"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/search_result"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/result_lorem"
-            android:textSize="25sp"
-            android:layout_marginStart="12dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="6dp"
             android:layout_marginEnd="12dp"
+            android:text="@string/result_lorem"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toEndOf="@+id/tv_result"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/contain"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/search_result"
-            app:layout_constraintStart_toStartOf="@id/search_result"
+            app:layout_constraintStart_toStartOf="@id/tv_result"
             app:layout_constraintTop_toBottomOf="@id/search_result" />
 
         <TextView
@@ -135,22 +154,15 @@
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
             tools:text="@tools:sample/lorem" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        layout="@layout/loading_layout"
-        android:id="@+id/loading_layout"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/search_bar"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+    <!--RESULT NOT FOUND LAYOUT-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/error_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/search_bar"
+        app:layout_constraintTop_toBottomOf="@id/long_divider"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone">
 
@@ -166,11 +178,12 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!--INITIAL LAYOUT-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/landing_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/search_bar"
+        app:layout_constraintTop_toBottomOf="@id/long_divider"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="visible">
 
@@ -187,5 +200,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--LOADING LAYOUT-->
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        layout="@layout/loading_layout"
+        android:id="@+id/loading_layout"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/long_divider"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
